[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twilight_log_parser"]

[project]
name = "twilight-log-parser"
version = "0.1.0"
authors = [
  { name="Browning Gentry" },
]
description = "API to parse Twilight Struggle game logs into a structured format."
readme = "README.md"
requires-python = ">=3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "frozendict>=2.4.6",
    "typing_extensions==4.12.2"
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "flake8-pyproject>=1.2.3",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "output_files", "tests/test_logs"]

[project.urls]
"Homepage" = "https://github.com/browning-gentry/twilight-log-parser"
"Bug Tracker" = "https://github.com/browning-gentry/twilight-log-parser/issues"

